# PAPAS

./: .README.txt  CMakeLists.txt  GNUmakefile  LICENSE  OpNovice.cc  README  README.md  beam.mac  geom.mac  geometry.mac  hist.mac  lightGuide.cc  loopX.mac  loopY.mac  models.mac  run1.mac  run2.mac  runAndAnalyze.sh  surface.mac  vis.mac
Analysis/: compareHisto.cpp  plotHisto.cc
include/: ASCIIPrimaryGenerator.hh  ActionInitialization.hh  AirHit.hh  AirSD.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  Hit.hh  Materials.hh  OpNoviceActionInitialization.hh  OpNoviceDetectorConstruction.hh  OpNoviceEventAction.hh  OpNovicePrimaryGeneratorAction.hh  OpNoviceRunAction.hh  PMTHit.hh  PMTSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SteppingAction.hh  lgAnalysis.hh
models/: 2020WC.stl  EMprototype.stl  EMprototypeSingle.stl  LightGuide2018TB.stl  WC_channel.stl  Winston_cone.stl  YuvalCone.stl  YuvalHad.stl  banana.stl  run2.stl  run3wc.stl
src/: ASCIIPrimaryGenerator.cc  ActionInitialization.cc  AirHit.cc  AirSD.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  Hit.cc  Materials.cc  OpNoviceActionInitialization.cc  OpNoviceDetectorConstruction.cc  OpNoviceEventAction.cc  OpNovicePhysicsList.cc  OpNovicePhysicsListMessenger.cc  OpNovicePrimaryGeneratorAction.cc  OpNoviceRunAction.cc  OpNoviceSteppingVerbose.cc  OpticalPhysics.cc  PMTHit.cc  PMTSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc
